<resources>
    <string name="app_name">FuelMe</string>
    <string name="sample_display_name">Sarath Disanayaka</string>
    <string name="sample_email">sarathdis@gmail.com</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>

    <!-- Malwatta H.G. -->
    <string name="add_feedback_txt">Add Feedback</string>
    <string name="add_feedback_description">Description</string>
    <string name="add_feedback_subject">Subject</string>
    <string name="add_feedback_btn">Submit</string>
    <string name="edit_feedback_btn">Update</string>
    <string name="toolbar_title">Toolbar Title</string>
    <string name="add_feedback_subject_hint">Enter your subject</string>
    <string name="add_feedback_description_hint">Enter your description</string>
    <string name="add_feedback_list_txt">All Feedbacks</string>
    <string name="edit_feedback_txt">Edit Feedback</string>
    <string name="single_item_feedback_subject_txt">Subject </string>
    <string name="single_item_feedback_description_txt">Description</string>
    <string name="single_item_feedback_dateTime_txt">Date and Time</string>
    <string name="single_item_feedback_username_txt">Username</string>
    <string name="delete_single_feedback_btn_txt">Delete</string>
    <string name="edit_single_feedback_btn_txt">Edit</string>
    <string name="single_feedback_txt">Feedback</string>

    <string name="sample_station_name">Eheliyagoda Associates</string>
    <string name="sample_station_address">41/8, Sangabo Mawatha, Colombo.</string>
    <string name="open_status">Now Open</string>
    <string name="closed_status">Closed</string>
    <string name="petrol">Petrol</string>
    <string name="diesel">Diesel</string>
    <string name="available">Available</string>
    <string name="sample_queue_length">10</string>
    <string name="queue_length">Queue Length</string>
    <string name="join_queue">Join the queue</string>
    <string name="leave_queue">Leave the queue</string>
    <string name="station_details">Station Details</string>
    <string name="sample_phone_number">0115522331</string>
    <string name="sample_website">eheliyagoda.lk</string>
    <string name="open">Open</string>
    <string name="register_station">Register Station</string>
    <string name="update_station">Update Station</string>
    <string name="license">License</string>
    <string name="license_hint">Enter your station license</string>
    <string name="station_name_hint">Enter your station Name</string>
    <string name="station_name">Station Name</string>
    <string name="station_address_hint">Enter address of the station</string>
    <string name="station_address">Station Address</string>
    <string name="station_email_hint">Enter the contact email for the station</string>
    <string name="station_email">Station Email</string>
    <string name="station_website_hint">Enter station website</string>
    <string name="station_website">Station Website</string>
    <string name="station_website_optional">Station Website (Optional)</string>
    <string name="edit">Edit</string>
    <string name="colon_space"> : </string>
    <string name="mark_petrol_unavailable">Mark Petrol Unavailable</string>
    <string name="mark_diesel_unavailable">Mark Diesel Unavailable</string>
    <string name="close_station">Close the station</string>
    <string name="view_all_owned_stations">View all your stations</string>
    <string name="view_feedback">View Feedback</string>
    <string name="view_notices">View Notices</string>
    <string name="post_notice">Post a notice</string>

    <!-- Auth & Notice -->
    <string name="special_notices">Special Notices</string>
    <string name="notice_title">Notice Title</string>
    <string name="description">Description</string>
    <string name="date_and_time_here">Date and Time Here</string>
    <string name="author_name">Author Name</string>
    <string name="station_special_notices">Station Special Notices</string>
    <string name="notice_description">Notice Description</string>
    <string name="add">ADD</string>
    <string name="notice">Notice</string>
    <string name="_2022_10_18_13_15_00">2022/10/18 13:15:00</string>
    <string name="notice_description_sample">Notice Description Sample</string>
    <string name="notice_sample_title">Notice Sample Title</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="full_name">Full Name</string>
    <string name="re_password">Re-Password</string>
    <string name="email">Email</string>
    <string name="role">Role</string>
    <string name="cancel">Cancel</string>
    <string name="auth_register">Register</string>
    <string name="select_role">Select Role</string>
    <string name="icon_plus">+</string>
    <string name="create_new_notice">Create New Notice</string>
    <string name="select_station">Select Station</string>
    <string name="profile">Profile</string>
    <string name="profile_image">Profile Image</string>
    <string name="sample_data">Sample Data</string>
    <string name="user_type">User Type</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="phone_number">Phone Number</string>
    <string name="station_phone_hint">Enter the phone number for the station</string>
    <string name="ok">OK</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="add_to_favourites_description">Add this station to your favourites</string>

    <string name="special_notice">Special Notice</string>

    <string name="danger_zone">Danger Zone</string>
    <string name="sample_license">l0001</string>
    <string name="sample_id">esae51254sawe151</string>
    <string name="station_delete_warning">Warning: Deleting this station will permanently remove its records from the system</string>
    <string name="delete_field_header">To delete the station, enter the station License below and press delete</string>
    <string name="station_id">Station ID</string>
    <string name="delete_station">Delete Station</string>
    <string name="license_with_colon">License : </string>
    <string name="station_id_with_colon">ID : </string>
    <string name="more">More</string>
    <string name="address">Address</string>
    <string name="website">Website</string>
    <string name="more_setails_notice">The email and phone number are related to the station. They are not necessarily your personal ones.</string>
    <string name="edit_station_details">Edit Station Details</string>
    <string name="save_changes">Save Changes</string>
    <string name="current_station_message">You are currently in Eheliyagoda Associates</string>
    <string name="view_station">View Station</string>
    <string name="current_station">Current Station</string>
    <string name="view_history">View History</string>
    <string name="customer_dashboard">Customer Dashboard</string>
    <string name="sample_date">2022-10-15</string>
    <string name="sample_time">09:45</string>
    <string name="sample_station_id">asdf1242q4</string>
    <string name="queue">Queue</string>
    <string name="action">Action</string>
    <string name="join">Join</string>
    <string name="refuel_status">Refuel Status</string>
    <string name="refueled">Refueled</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="view_logs">View Logs</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="sample_fuel_type">Petrol</string>
    <string name="fuel_status">Fuel Status</string>
    <string name="sample_fuel_status">Available</string>
    <string name="hello">Hello</string>
    <string name="space"> </string>
    <string name="sample_user_full_name">Jayantha Gunathilaka</string>
    <string name="view_customer_history">You can view your queue history</string>
    <string name="fuelme">FuelMe</string>
    <string name="tagline">Navigating through queues</string>
    <string name="an_rhn_production">An RHN Production</string>
    <string name="ravindu_name">Ravindu Wataketiya</string>
    <string name="lankesh_name">Navinda Chandrasiri</string>
    <string name="hirush_name">Hirush Malwatta</string>
    <string name="app_description">This app allows its users to view and update crowd sourced data regarding fuel queues in fuel stations in Sri Lanka. This app was developed as an assignment for the module Enterprise Application Development at Sri Lanka Institute of Information Technology (SLIIT). All rights regarding this app are reserved by its developers.</string>
    <string name="all">All</string>
    <string name="favourites">Favourites</string>

</resources>