<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="5dp"
        android:elevation="10dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="vertical"
            android:background="?colorSecondary"
            >

            <TextView
                android:id="@+id/txtView_date_customer_refuel_history_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_date"
                android:textSize="22sp"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />

            <TextView
                android:id="@+id/txtView_time_customer_refuel_history_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_time"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/station_id"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />

            <TextView
                android:id="@+id/txtView_stationId_customer_refuel_history_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_station_id"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/station_name"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />

            <TextView
                android:id="@+id/txtView_stationName_customer_refuel_history_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_station_name"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/queue"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />

            <TextView
                android:id="@+id/txtView_queue_customer_refuel_history_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/petrol"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />

            <TextView
                android:id="@+id/txtView_action_customer_refuel_history_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/join"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/refuel_status"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />

            <TextView
                android:id="@+id/txtView_refuelStatus_customer_refuel_history_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/refueled"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>