<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.delete_station_screen.DeleteStationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/delete_station_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/red"
        app:titleTextColor="@color/white"
        app:title="@string/danger_zone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtView_stationName_delete_station"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_station_name"
            android:textStyle="bold"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/txtView_stationAddress_delete_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_station_address"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license_with_colon"
                />

            <TextView
                android:id="@+id/txtView_license_delete_station"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/sample_license"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/station_id_with_colon"
                />

            <TextView
                android:id="@+id/txtVIew_stationId_delete_station"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/sample_id"
                />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/station_delete_warning"
            android:textColor="@color/red"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_field_header"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtTxt_stationId_delete_station"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/slightly_rounded_edittext"
                android:hint="@string/station_id"
                android:minHeight="48dp"
                android:inputType="text"
                android:padding="10dp"
                />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_deleteStation_delete_station"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/delete_station"
            />
    </LinearLayout>



</LinearLayout>