<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.customer_dashboard.CustomerDashboardActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/customer_dashboard_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_weight="6"
        >

        <TextView
            android:id="@+id/txtView_fullName_customer_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_user_full_name"
            android:textSize="24sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/txtView_email_customer_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_email"
            android:textSize="18sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical"
        android:layout_weight="1"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/current_station" />

        <TextView
            android:id="@+id/txtView_stationName_customer_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/sample_station_name"
            android:paddingBottom="10dp"
            />

        <Button
            android:id="@+id/btn_viewStation_customer_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="viewStationButtonClick"
            android:text="@string/view_station" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical"
        android:layout_weight="1"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_customer_history"
            android:paddingBottom="10dp"
            android:textSize="15sp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="navigateToViewHistory"
            android:text="@string/view_history" />
    </LinearLayout>

</LinearLayout>